@@ -1,0 +1,3 @@
+<% content_for :title do %>About<% end %>
+<h3>About the Website</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
