@@ -1,3 +1,3 @@
 module RailsAppsPages
-  VERSION = "0.3.0"
+  VERSION = "0.3.1"
 end
